--- a/js13kgames/package.json
+++ b/js13kgames/package.json
@@ -17,5 +17,10 @@
     "breaker panel"
   ],
   "author": "André Jaenisch",
-  "license": "GPL-3.0"
+  "license": "GPL-3.0",
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-contrib-uglify": "^0.9.2",
+    "grunt-mocha": "^0.4.13"
+  }
 }
