--- a/js13kgames/package.json
+++ b/js13kgames/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-uglify": "^0.9.2",
-    "grunt-mocha": "^0.4.13"
+    "grunt-mocha": "^0.4.13",
+    "grunt-mocha-chai-sinon": "0.0.9"
   }
 }
