--- a/js13kgames/package.json
+++ b/js13kgames/package.json
@@ -10,6 +10,9 @@
     "type": "git",
     "url": "https://github.com/Ryuno-Ki/Ryuno-Ki.github.io.git/"
   },
+  "bugs": {
+    "url": "https://github.com/Ryuno-Ki/Ryuno-Ki.github.io.git/issues/"
+  },
   "keywords": [
     "js13kgames",
     "logic",
@@ -20,9 +23,17 @@
   "license": "GPL-3.0",
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-contrib-cssmin": "^0.13.0",
+    "grunt-contrib-imagemin": "^0.9.4",
+    "grunt-contrib-jshint": "^0.11.2",
     "grunt-contrib-uglify": "^0.9.2",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-jsdoc": "^0.6.8",
     "grunt-max-filesize": "^0.1.0",
     "grunt-mocha": "^0.4.13",
-    "grunt-mocha-chai-sinon": "0.0.9"
+    "grunt-mocha-chai-sinon": "0.0.9",
+    "grunt-notify": "^0.4.1",
+    "grunt-processhtml": "^0.3.8",
+    "time-grunt": "^1.2.1"
   }
 }
