--- a/js13kgames/package.json
+++ b/js13kgames/package.json
@@ -23,6 +23,7 @@
   "license": "GPL-3.0",
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-contrib-compress": "^0.13.0",
     "grunt-contrib-cssmin": "^0.13.0",
     "grunt-contrib-imagemin": "^0.9.4",
     "grunt-contrib-jshint": "^0.11.2",
