--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "grunt": "^0.4.5",
     "grunt-contrib-compress": "^0.13.0",
     "grunt-contrib-cssmin": "^0.13.0",
+    "grunt-contrib-htmlmin": "^0.4.0",
     "grunt-contrib-jshint": "^0.11.2",
     "grunt-contrib-uglify": "^0.9.2",
     "grunt-contrib-watch": "^0.6.1",
